# tiny-libc

./: .gitignore  CMakeLists.txt  LICENSE  deps.toml  package.json
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml
include/tiny-libc/: tiny_libc.h
src/: .gitignore  CMakeLists.txt
src/include/tiny-libc/: tiny_libc.h
src/lib/: CMakeLists.txt  Tornado.cmake  cmake_gen.toml  tiny_libc.c
